History:

<see Git checking messages for history>

5.0.0   2019/xx/xx
      - removed support for Python 2.7
      - MSS: improve type annotations and add CI check
      - MSS: use __slots__ for better performances
      - MSS: better handle resources to prevent leaks
      - Windows: use our own instances of GDI32 and User32 DLLs
      - doc: add project_urls to setup.cfg
      - doc: add an example using the multiprocessing module (closes #82)

4.0.2   2019/02/23
      - new contributor: foone
      - Windows: ignore missing SetProcessDPIAware() on Window XP (fixes #109)

4.0.1   2019/01/26
      - Linux: fix several XLib functions signature (fixes #92)
      - Linux: improve monitors finding by a factor of 44

4.0.0   2019/01/11
      - MSS: remove use of setup.py for setup.cfg
      - MSS: renamed MSSBase to MSSMixin in base.py
      - MSS: refactor ctypes argtype, restype and errcheck setup (fixes #84)
      - Linux: ensure resources are freed in grab()
      - Windows: avoid unnecessary class attributes
      - MSS: ensure calls without context manager will not leak resources or document them (fixes #72 and #85)
      - MSS: fix Flake8 C408: Unnecessary dict call - rewrite as a literal, in exceptions.py
      - MSS: fix Flake8 I100: Import statements are in the wrong order
      - MSS: fix Flake8 I201: Missing newline before sections or imports
      - MSS: fix PyLint bad-super-call: Bad first argument 'Exception' given to super()
      - tests: use tox, enable PyPy and PyPy3, add macOS and Windows CI

3.3.2   2018/11/20
      - new contributors: hugovk, Andreas Buhr
      - MSS: do monitor detection in MSS constructor (fixes #79)
      - MSS: specify compliant Python versions for pip install
      - tests: enable Python 3.7
      - tests: fix test_entry_point() with multiple monitors

3.3.1   2018/09/22
      - Linux: fix a memory leak introduced with 7e8ae5703f0669f40532c2be917df4328bc3985e (fixes #72)
      - doc: add the download statistics badge
